Fix gaps between cards on the sidebar

--- a/app/assets/components/contact/contact.scss
+++ b/app/assets/components/contact/contact.scss
@@ -4,51 +4,53 @@ $contact-border-color: $color_nhsuk-grey-4;
 $contact-border-hover-color: $color_nhsuk-grey-3;
 
 .nhsuk-contact {
-  @include nhsuk-responsive-margin(7, 'bottom');
+  @include nhsuk-responsive-margin(6, 'bottom');
 
   position: relative; /* [1] */
   width: 100%;
+
+  h4 {
+    font-size: 1.1875rem;
+  }
+
+  .nhsuk-contact__img-container {
+    @include print-hide();
+    width: 10rem;
+    height: 10rem;
+    margin-bottom: nhsuk-spacing(4);
+  }
+  
+  .nhsuk-contact__img {
+    @include print-hide();
+    border-bottom: $contact-border-width solid $color_nhsuk-grey-5; /* [2] */
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+  }
+  
+  .nhsuk-contact__heading,
+  .nhsuk-contact__metadata,
+  .nhsuk-contact__description {
+    margin-bottom: nhsuk-spacing(2);
+  }
+  
+  .nhsuk-contact hr {
+    margin-top: nhsuk-spacing(4);
+    margin-bottom: nhsuk-spacing(4);
+  }
+  
+  .nhsuk-contact a {
+    word-wrap:break-word;
+  }
+  
+  .nhsuk-contact__secondary-info > * {
+    margin-bottom: nhsuk-spacing(2);
+  }
+
 }
 
-h4 {
-  font-size: 1.1875rem;
-}
-
-.nhsuk-contact__img-container {
-  @include print-hide();
-  width: 10rem;
-  height: 10rem;
-  margin-bottom: nhsuk-spacing(4);
-}
-
-.nhsuk-contact__img {
-  @include print-hide();
-  border-bottom: $contact-border-width solid $color_nhsuk-grey-5; /* [2] */
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  border-radius: 50%;
-}
-
-.nhsuk-contact__heading,
-.nhsuk-contact__metadata,
-.nhsuk-contact__description {
-  margin-bottom: nhsuk-spacing(2);
-}
-
-.nhsuk-contact hr {
-  margin-top: nhsuk-spacing(4);
-  margin-bottom: nhsuk-spacing(4);
-}
-
-.nhsuk-contact a {
-  word-wrap:break-word;
-}
-
-.nhsuk-contact__secondary-info > * {
-  margin-bottom: nhsuk-spacing(2);
-}
 
 /* ====== contact card ====== */
 
@@ -62,6 +64,7 @@ h4 {
 .nhsuk-contact__card {
   background: $color_nhsuk-white;
   border: $contact-border-width solid $contact-border-color;
+  margin-bottom: nhsuk-spacing(4);
 
   h2 {
     @extend .nhsuk-heading-s;
